Add layout, clean up book index slightly

--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Book/Index.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Book/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model BookViewModel
 
 <h2 class="center-align col-md-12">All Books</h2>
+<h5 class="center-align col-md-12">All the books in the game, including when they become available, the title, how to get them, and what effect they give once fully read.</h5>
 <table class="col-md-8 col-md-offset-2">
     <thead>
         <tr>
@@ -24,7 +25,7 @@
 </table>
 
 <h2 class="center-align col-md-12">Book Order</h2>
-<h6 class="center-align col-md-12">This is the order of the books in the inventory, to make it easier to see which books you are missing.</h6>
+<h5 class="center-align col-md-12">This is the order of the books in the inventory, to make it easier to see which books you are missing.</h5>
 <table class="col-md-2 col-md-offset-5">
     @foreach (var bookTitle in Model.BookOrder)
     {
