--- a/Persona4GoldenHelper/Persona4GoldenHelper/wwwroot/css/site.css
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/wwwroot/css/site.css
@@ -1,4 +1,29 @@
-﻿body {
+﻿#page-header {
+    padding-top: 10px;
+}
+
+    #page-header .header {
+        font-size: 25px;
+        text-decoration: none;
+        font-weight: bold;
+        color: #c5c1b9;
+    }
+
+    #page-header li {
+        display: inline;
+    }
+
+        #page-header li a {
+            text-decoration: none;
+            color: #c5c1b9;
+        }
+
+    #page-header .divider {
+        font-weight: bold;
+        color: #555;
+    }
+
+body {
     font-family: 'Roboto', sans-serif;
     background-color: #121212;
     color: #c5c1b9;
