--- a/Persona4GoldenHelper/Persona4GoldenHelper/wwwroot/css/site.css
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/wwwroot/css/site.css
@@ -1,4 +1,24 @@
-﻿#page-header {
+﻿/* scrollbar width */
+::-webkit-scrollbar {
+    width: 15px;
+}
+
+/* scrollbar track */
+::-webkit-scrollbar-track {
+    background: #2a2a2a;
+}
+
+/* scrollbar handle */
+::-webkit-scrollbar-thumb {
+    background: #444;
+}
+
+    /* scrollbar handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
+        background: #555;
+    }
+
+#page-header {
     padding-top: 10px;
 }
 
