Add the main persona view

--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Skills.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Skills.cshtml
@@ -40,7 +40,7 @@
 </div>
 
 @functions {
-    private string CalculateCostType(string cost)
+    public static string CalculateCostType(string cost)
     {
         if (cost.Length == 0)
         {
