--- a/Persona4GoldenHelper/Persona4GoldenHelper/wwwroot/css/site.css
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/wwwroot/css/site.css
@@ -51,6 +51,11 @@ body {
     color: #c5c1b9;
 }
 
+img {
+    max-width: 26px;
+    height: auto;
+}
+
 table {
     border: 1px solid #353535;
     border-collapse: collapse;
@@ -119,5 +124,30 @@ table {
 
 .cost-hp {
     color: #f71df0;
+    font-weight: bold;
+}
+
+.affinity-weak {
+    color: red;
+    font-weight: bold;
+}
+
+.affinity-resistant {
+    color: #9a10b5;
+    font-weight: bold;
+}
+
+.affinity-null {
+    color: dodgerblue;
+    font-weight: bold;
+}
+
+.affinity-reflect {
+    color: #FFD700;
+    font-weight: bold;
+}
+
+.affinity-absorb {
+    color: #16ce3c;
     font-weight: bold;
 }
