--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/ExamAnswers.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/ExamAnswers.cshtml
@@ -1,12 +1,12 @@
 ﻿@model ExamAnswerViewModel
 
-<h2 class="center-align col-md-12">All exam questions and answers</h2>
+<h2 class="text-align-center col-md-12">All exam questions and answers</h2>
 
-<h2 class="center-align col-md-12">April</h2>
+<h2 class="text-align-center col-md-12">April</h2>
 <table class="col-md-8 col-md-offset-2">
     <thead>
         <tr>
-            <th class="center-align col-md-1">Date</th>
+            <th class="text-align-center col-md-1">Date</th>
             <th class="col-md-7">Question</th>
             <th class="col-md-4">Answer</th>
         </tr>
@@ -15,7 +15,7 @@
         @foreach (var answer in Model.April)
         {
             <tr>
-                <td class="center-align col-md-1">@answer.DateAsked</td>
+                <td class="text-align-center col-md-1">@answer.DateAsked</td>
                 <td class="col-md-7 text-bright">@answer.QuestionAsked</td>
                 <td class="col-md-4">@answer.QuestionAnswer</td>
             </tr>
@@ -23,11 +23,11 @@
     </tbody>
 </table>
 
-<h2 class="center-align col-md-12">May</h2>
+<h2 class="text-align-center col-md-12">May</h2>
 <table class="col-md-8 col-md-offset-2">
     <thead>
         <tr>
-            <th class="center-align col-md-1">Date</th>
+            <th class="text-align-center col-md-1">Date</th>
             <th class="col-md-7">Question</th>
             <th class="col-md-4">Answer</th>
         </tr>
@@ -36,7 +36,7 @@
         @foreach (var answer in Model.May)
         {
             <tr>
-                <td class="center-align col-md-1">@answer.DateAsked</td>
+                <td class="text-align-center col-md-1">@answer.DateAsked</td>
                 <td class="col-md-7 text-bright">@answer.QuestionAsked</td>
                 <td class="col-md-4">@answer.QuestionAnswer</td>
             </tr>
@@ -44,11 +44,11 @@
     </tbody>
 </table>
 
-<h2 class="center-align col-md-12">June</h2>
+<h2 class="text-align-center col-md-12">June</h2>
 <table class="col-md-8 col-md-offset-2">
     <thead>
         <tr>
-            <th class="center-align col-md-1">Date</th>
+            <th class="text-align-center col-md-1">Date</th>
             <th class="col-md-7">Question</th>
             <th class="col-md-4">Answer</th>
         </tr>
@@ -57,7 +57,7 @@
         @foreach (var answer in Model.June)
         {
             <tr>
-                <td class="center-align col-md-1">@answer.DateAsked</td>
+                <td class="text-align-center col-md-1">@answer.DateAsked</td>
                 <td class="col-md-7 text-bright">@answer.QuestionAsked</td>
                 <td class="col-md-4">@answer.QuestionAnswer</td>
             </tr>
@@ -65,11 +65,11 @@
     </tbody>
 </table>
 
-<h2 class="center-align col-md-12">July</h2>
+<h2 class="text-align-center col-md-12">July</h2>
 <table class="col-md-8 col-md-offset-2">
     <thead>
         <tr>
-            <th class="center-align col-md-1">Date</th>
+            <th class="text-align-center col-md-1">Date</th>
             <th class="col-md-7">Question</th>
             <th class="col-md-4">Answer</th>
         </tr>
@@ -78,7 +78,7 @@
         @foreach (var answer in Model.July)
         {
             <tr>
-                <td class="center-align col-md-1">@answer.DateAsked</td>
+                <td class="text-align-center col-md-1">@answer.DateAsked</td>
                 <td class="col-md-7 text-bright">@answer.QuestionAsked</td>
                 <td class="col-md-4">@answer.QuestionAnswer</td>
             </tr>
@@ -86,11 +86,11 @@
     </tbody>
 </table>
 
-<h2 class="center-align col-md-12">August</h2>
+<h2 class="text-align-center col-md-12">August</h2>
 <table class="col-md-8 col-md-offset-2">
     <thead>
         <tr>
-            <th class="center-align col-md-1">Date</th>
+            <th class="text-align-center col-md-1">Date</th>
             <th class="col-md-7">Question</th>
             <th class="col-md-4">Answer</th>
         </tr>
@@ -99,7 +99,7 @@
         @foreach (var answer in Model.August)
         {
             <tr>
-                <td class="center-align col-md-1">@answer.DateAsked</td>
+                <td class="text-align-center col-md-1">@answer.DateAsked</td>
                 <td class="col-md-7 text-bright">@answer.QuestionAsked</td>
                 <td class="col-md-4">@answer.QuestionAnswer</td>
             </tr>
@@ -107,11 +107,11 @@
     </tbody>
 </table>
 
-<h2 class="center-align col-md-12">September</h2>
+<h2 class="text-align-center col-md-12">September</h2>
 <table class="col-md-8 col-md-offset-2">
     <thead>
         <tr>
-            <th class="center-align col-md-1">Date</th>
+            <th class="text-align-center col-md-1">Date</th>
             <th class="col-md-7">Question</th>
             <th class="col-md-4">Answer</th>
         </tr>
@@ -120,7 +120,7 @@
     @foreach (var answer in Model.September)
     {
         <tr>
-            <td class="center-align col-md-1">@answer.DateAsked</td>
+            <td class="text-align-center col-md-1">@answer.DateAsked</td>
             <td class="col-md-7 text-bright">@answer.QuestionAsked</td>
             <td class="col-md-4">@answer.QuestionAnswer</td>
         </tr>
@@ -128,11 +128,11 @@
     </tbody>
 </table>
 
-<h2 class="center-align col-md-12">October</h2>
+<h2 class="text-align-center col-md-12">October</h2>
 <table class="col-md-8 col-md-offset-2">
     <thead>
         <tr>
-            <th class="center-align col-md-1">Date</th>
+            <th class="text-align-center col-md-1">Date</th>
             <th class="col-md-7">Question</th>
             <th class="col-md-4">Answer</th>
         </tr>
@@ -141,7 +141,7 @@
         @foreach (var answer in Model.October)
         {
             <tr>
-                <td class="center-align col-md-1">@answer.DateAsked</td>
+                <td class="text-align-center col-md-1">@answer.DateAsked</td>
                 <td class="col-md-7 text-bright">@answer.QuestionAsked</td>
                 <td class="col-md-4">@answer.QuestionAnswer</td>
             </tr>
@@ -149,11 +149,11 @@
     </tbody>
 </table>
 
-<h2 class="center-align col-md-12">November</h2>
+<h2 class="text-align-center col-md-12">November</h2>
 <table class="col-md-8 col-md-offset-2">
     <thead>
         <tr>
-            <th class="center-align col-md-1">Date</th>
+            <th class="text-align-center col-md-1">Date</th>
             <th class="col-md-7">Question</th>
             <th class="col-md-4">Answer</th>
         </tr>
@@ -162,7 +162,7 @@
         @foreach (var answer in Model.November)
         {
             <tr>
-                <td class="center-align col-md-1">@answer.DateAsked</td>
+                <td class="text-align-center col-md-1">@answer.DateAsked</td>
                 <td class="col-md-7 text-bright">@answer.QuestionAsked</td>
                 <td class="col-md-4">@answer.QuestionAnswer</td>
             </tr>
@@ -170,11 +170,11 @@
     </tbody>
 </table>
 
-<h2 class="center-align col-md-12">December</h2>
+<h2 class="text-align-center col-md-12">December</h2>
 <table class="col-md-8 col-md-offset-2">
     <thead>
         <tr>
-            <th class="center-align col-md-1">Date</th>
+            <th class="text-align-center col-md-1">Date</th>
             <th class="col-md-7">Question</th>
             <th class="col-md-4">Answer</th>
         </tr>
@@ -183,7 +183,7 @@
         @foreach (var answer in Model.December)
         {
             <tr>
-                <td class="center-align col-md-1">@answer.DateAsked</td>
+                <td class="text-align-center col-md-1">@answer.DateAsked</td>
                 <td class="col-md-7 text-bright">@answer.QuestionAsked</td>
                 <td class="col-md-4">@answer.QuestionAnswer</td>
             </tr>
@@ -191,11 +191,11 @@
     </tbody>
 </table>
 
-<h2 class="center-align col-md-12">January</h2>
+<h2 class="text-align-center col-md-12">January</h2>
 <table class="col-md-8 col-md-offset-2">
     <thead>
         <tr>
-            <th class="center-align col-md-1">Date</th>
+            <th class="text-align-center col-md-1">Date</th>
             <th class="col-md-7">Question</th>
             <th class="col-md-4">Answer</th>
         </tr>
@@ -204,7 +204,7 @@
         @foreach (var answer in Model.January)
         {
             <tr>
-                <td class="center-align col-md-1">@answer.DateAsked</td>
+                <td class="text-align-center col-md-1">@answer.DateAsked</td>
                 <td class="col-md-7 text-bright">@answer.QuestionAsked</td>
                 <td class="col-md-4">@answer.QuestionAnswer</td>
             </tr>
@@ -212,11 +212,11 @@
     </tbody>
 </table>
 
-<h2 class="center-align col-md-12">February</h2>
+<h2 class="text-align-center col-md-12">February</h2>
 <table class="col-md-8 col-md-offset-2">
     <thead>
         <tr>
-            <th class="center-align col-md-1">Date</th>
+            <th class="text-align-center col-md-1">Date</th>
             <th class="col-md-7">Question</th>
             <th class="col-md-4">Answer</th>
         </tr>
@@ -225,7 +225,7 @@
         @foreach (var answer in Model.February)
         {
             <tr>
-                <td class="center-align col-md-1">@answer.DateAsked</td>
+                <td class="text-align-center col-md-1">@answer.DateAsked</td>
                 <td class="col-md-7 text-bright">@answer.QuestionAsked</td>
                 <td class="col-md-4">@answer.QuestionAnswer</td>
             </tr>
