--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shared/_Layout.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shared/_Layout.cshtml
@@ -14,9 +14,11 @@
             <li class="divider"> | </li>
             <li><a asp-controller="App" asp-action="Books">Books</a></li>
             <li class="divider"> | </li>
-            <li><a asp-controller="App" asp-action="Equipment">Equipment</a></li>
+            <li><a asp-controller="App" asp-action="Weapons">Weapons</a></li>
             <li class="divider"> | </li>
-            <li><a asp-controller="App" asp-action="Clothing">Clothing</a></li>
+            <li><a asp-controller="App" asp-action="Armor">Armor</a></li>
+            <li class="divider"> | </li>
+            <li><a asp-controller="App" asp-action="Accessories">Accessories</a></li>
             <li class="divider"> | </li>
             <li><a asp-controller="App" asp-action="ExamAnswers">Exam Answers</a></li>
             <li class="divider"> | </li>
