--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Persona/Persona.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Persona/Persona.cshtml
@@ -1,72 +1,74 @@
 ﻿@model PersonaViewModel
 
-<h2 class="col-md-12 center-align">
-    @Model.Persona.Name (@Model.Persona.Level/@Model.Persona.Arcana)
-    <span class="type-ultimate" @(Model.Persona.Ultimate ? "" : "hidden")>Ultimate</span>
-    <span class="type-new-game" @(Model.Persona.NewGame ? "" : "hidden")>New Game+</span>
-</h2>
+<div>
+    <h2 class="col-md-12 text-align-center">
+        @Model.Persona.Name (@Model.Persona.Level/@Model.Persona.Arcana)
+        <span class="type-ultimate" @(Model.Persona.Ultimate ? "" : "hidden")>Ultimate</span>
+        <span class="type-new-game" @(Model.Persona.NewGame ? "" : "hidden")>New Game+</span>
+    <h2>
+</div>
 
 <div>
-    <h3 class="col-md-12 center-align">Stats</h3>
+    <h3 class="col-md-12 text-align-center">Stats</h3>
     <table class="col-md-8 col-md-offset-2">
         <thead>
             <tr>
-                <th class="center-align slim-column">Strength</th>
-                <th class="center-align slim-column">Magic</th>
-                <th class="center-align slim-column">Endurance</th>
-                <th class="center-align slim-column">Agility</th>
-                <th class="center-align slim-column">Luck</th>
+                <th class="text-align-center slim-column">Strength</th>
+                <th class="text-align-center slim-column">Magic</th>
+                <th class="text-align-center slim-column">Endurance</th>
+                <th class="text-align-center slim-column">Agility</th>
+                <th class="text-align-center slim-column">Luck</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td class="center-align">@Model.Persona.Stats.Strength</td>
-                <td class="center-align">@Model.Persona.Stats.Magic</td>
-                <td class="center-align">@Model.Persona.Stats.Endurance</td>
-                <td class="center-align">@Model.Persona.Stats.Agility</td>
-                <td class="center-align">@Model.Persona.Stats.Luck</td>
+                <td class="text-align-center">@Model.Persona.Stats.Strength</td>
+                <td class="text-align-center">@Model.Persona.Stats.Magic</td>
+                <td class="text-align-center">@Model.Persona.Stats.Endurance</td>
+                <td class="text-align-center">@Model.Persona.Stats.Agility</td>
+                <td class="text-align-center">@Model.Persona.Stats.Luck</td>
             </tr>
         </tbody>
     </table>
 </div>
 
 <div>
-    <h3 class="col-md-12 center-align">Elements</h3>
+    <h3 class="col-md-12 text-align-center">Elements</h3>
     <table class="col-md-8 col-md-offset-2">
         <thead>
             <tr>
-                <th class="center-align slim-column"><img src="~/img/Physical.png" alt="Physical" /></th>
-                <th class="center-align slim-column"><img src="~/img/Fire.png" alt="Fire" /></th>
-                <th class="center-align slim-column"><img src="~/img/Ice.png" alt="Ice" /></th>
-                <th class="center-align slim-column"><img src="~/img/Electric.png" alt="Electric" /></th>
-                <th class="center-align slim-column"><img src="~/img/Wind.png" alt="Wind" /></th>
-                <th class="center-align slim-column"><img src="~/img/Light.png" alt="Light" /></th>
-                <th class="center-align slim-column"><img src="~/img/Dark.png" alt="Dark" /></th>
+                <th class="text-align-center slim-column"><img src="~/img/Physical.png" alt="Physical" /></th>
+                <th class="text-align-center slim-column"><img src="~/img/Fire.png" alt="Fire" /></th>
+                <th class="text-align-center slim-column"><img src="~/img/Ice.png" alt="Ice" /></th>
+                <th class="text-align-center slim-column"><img src="~/img/Electric.png" alt="Electric" /></th>
+                <th class="text-align-center slim-column"><img src="~/img/Wind.png" alt="Wind" /></th>
+                <th class="text-align-center slim-column"><img src="~/img/Light.png" alt="Light" /></th>
+                <th class="text-align-center slim-column"><img src="~/img/Dark.png" alt="Dark" /></th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td class="center-align affinity-@Model.Persona.Elements.Physical">@ConvertElementAffinityToShortHand(Model.Persona.Elements.Physical)</td>
-                <td class="center-align affinity-@Model.Persona.Elements.Fire">@ConvertElementAffinityToShortHand(Model.Persona.Elements.Fire)</td>
-                <td class="center-align affinity-@Model.Persona.Elements.Ice">@ConvertElementAffinityToShortHand(Model.Persona.Elements.Ice)</td>
-                <td class="center-align affinity-@Model.Persona.Elements.Electricity">@ConvertElementAffinityToShortHand(Model.Persona.Elements.Electricity)</td>
-                <td class="center-align affinity-@Model.Persona.Elements.Wind">@ConvertElementAffinityToShortHand(Model.Persona.Elements.Wind)</td>
-                <td class="center-align affinity-@Model.Persona.Elements.Light">@ConvertElementAffinityToShortHand(Model.Persona.Elements.Light)</td>
-                <td class="center-align affinity-@Model.Persona.Elements.Darkness">@ConvertElementAffinityToShortHand(Model.Persona.Elements.Darkness)</td>
+                <td class="text-align-center affinity-@Model.Persona.Elements.Physical">@ConvertElementAffinityToShortHand(Model.Persona.Elements.Physical)</td>
+                <td class="text-align-center affinity-@Model.Persona.Elements.Fire">@ConvertElementAffinityToShortHand(Model.Persona.Elements.Fire)</td>
+                <td class="text-align-center affinity-@Model.Persona.Elements.Ice">@ConvertElementAffinityToShortHand(Model.Persona.Elements.Ice)</td>
+                <td class="text-align-center affinity-@Model.Persona.Elements.Electricity">@ConvertElementAffinityToShortHand(Model.Persona.Elements.Electricity)</td>
+                <td class="text-align-center affinity-@Model.Persona.Elements.Wind">@ConvertElementAffinityToShortHand(Model.Persona.Elements.Wind)</td>
+                <td class="text-align-center affinity-@Model.Persona.Elements.Light">@ConvertElementAffinityToShortHand(Model.Persona.Elements.Light)</td>
+                <td class="text-align-center affinity-@Model.Persona.Elements.Darkness">@ConvertElementAffinityToShortHand(Model.Persona.Elements.Darkness)</td>
             </tr>
         </tbody>
     </table>
 </div>
 
 <div>
-    <h3 class="col-md-12 center-align">Skills</h3>
+    <h3 class="col-md-12 text-align-center">Skills</h3>
     <table class="col-md-8 col-md-offset-2">
         <thead>
             <tr>
                 <th>Level</th>
                 <th>Name</th>
                 <th>Effect</th>
-                <th class="center-align slim-column">Cost</th>
+                <th class="text-align-center slim-column">Cost</th>
             </tr>
         </thead>
         <tbody>
@@ -79,7 +81,7 @@
                     <td>@personaSkill.LevelRequired</td>
                     <td class="text-bright">@skill.Name</td>
                     <td>@skill.Effect</td>
-                    <td class="center-align @CalculateCostType(skill.Cost)">@(skill.Cost != "" ? skill.Cost : "-")</td>
+                    <td class="text-align-center @CalculateCostType(skill.Cost)">@(skill.Cost != "" ? skill.Cost : "-")</td>
                 </tr>
             }
         </tbody>
@@ -94,7 +96,7 @@
     public static string ConvertElementAffinityToShortHand(ElementAffinity element)
     {
         Dictionary<string, string> converter = new Dictionary<string, string>
-    {
+{
             { "Weak", "wk" },
             { "None", "-" },
             { "Resistant", "rs" },
